# Multimedia_Application

./: .gitignore  API_ZingMp3.cpp  ButtonStyle.qml  CMakeLists.txt  Caro.txt  CaroGame.qml  CaroGameMain.qml  CaroGameMode.qml  ControlBar.qml  CurrentSongItem.qml  Game.qml  ImageOvalStyle.qml  Main.qml  MapItem.qml  MenuBarComponent.qml  Music.qml  MusicControl.qml  MusicControlBar.qml  MusicListViewPlayList.qml  NavigationBar.qml  README.md  Remote.qml  Resource.qrc  SearchMapComponent.qml  Setting.qml  SliderControlMusic.qml  StackViewStyle.qml  ZingMp3Home.qml  Zing_mp3.txt  api_osmmap.cpp  caro_computer.cpp  caro_computer.h  caro_viewmodel.cpp  caro_viewmodel.h  caro_winchecker.cpp  caroviewmodel.cpp  caroviewmodel.h  carowinchecker.cpp  carowinchecker.h  main.cpp  (+10 more)
ViewModel/CaroViewModel/: caro_viewmodel.h
ViewModel/MapViewModel/: model_map.h
ViewModel/ParameterViewModel/: parameter.cpp
ViewModel/PlaylistViewModel/: model_playlist.h
ViewModel/UartViewModel/: uart_viewmodel.cpp  uart_viewmodel.h
core/CaroGame/: caro_computer.h  caro_winchecker.h
core/Uart/: uart.cpp  uart.h
models/api/: API_ZingMp3.h  api_osmmap.h
qml/component/: PopupWarring.qml  TitleItem.qml
qml/pages/Game/: Game.qml
qml/pages/Game/CaroGame/: CaroGameMain.qml
qml/pages/Map/: MapComponent.qml  MapItem.qml  RoadDetail.qml  SearchMapComponent.qml  TextStyleRoad.qml
qml/pages/ParameterOto/: Home.qml  PowerComponent.qml  WatchSpeedComponent.qml
qml/pages/PlaylistMusic/: Main.qml  MapComponent.qml  MusicContent.qml  PlayListMusic.qml
